# ngsxditto

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
ci/: fix_mkl.sh  install_base_deps.sh  run_tests.sh
docs/: generate_docs.sh  requirements.txt
docs/source/: conf.py  contents.rst  documentation.rst  examples.rst  index.rst
examples/: 3d_oscillating_droplet.ipynb  3d_oscillating_droplet.py  GP_extension.py  basic_stokes.ipynb  basic_stokes.py  ditto_lset.ipynb  ditto_lset.py  droplet_on_solid.ipynb  element_based_extension.py  example.py  mean_curv_ditto.ipynb  mean_curv_ditto.py  moving_stokes.ipynb  moving_stokes.py  narrow_band_transport.py  narrow_band_transport_compare.py  narrow_band_transport_implicitdg.py  oscillating_droplet.ipynb  oscillating_droplet.py  schaefer_turek.ipynb  simple_transport.py  swaying_water.ipynb  transport_and_redistancing.ipynb  transport_and_redistancing.py  two_phase_oscillating_droplet.ipynb  two_phase_oscillating_droplet.py  utils_compare.py
ngsxditto/: __init__.py  callback.py  new_solver.py  profiles_and_timing.py  progress_info.py  solver.py  stateholder.py  stepper.py  submodule.py  transport.py  visualization.py
ngsxditto/extension/: __init__.py  (+4 more)
tests/: test_convergence.py  test_explicitdg.py  test_extension.py  test_fluids.py  test_functionality.py  test_implicitdg.py  test_implicitsupg.py  test_import.py  test_known_transport_field.py  test_levelset.py  test_linear_fmm.py  test_meancurv.py  test_params.py  test_quadratic_fmm.py  test_solver.py  test_two_phase.py
(+46 files in other folders)
